# PX4-Autonomous-Missions

./: .gitignore  README.md  fly.py  mission.py  obstacle_avoidance.py  offboard_avoidance.py  plot_flight.py  requirements.txt
config/: mavros_params.yaml
launch/: simulation.launch.py
src/px4_offboard/: package.xml  setup.py
src/px4_offboard/px4_offboard/: offboard_control.py  offboard_mission.py
worlds/: obstacle_world.sdf
