<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_offboard</name>
  <version>0.1.0</version>
  <description>PX4 OFFBOARD control nodes using px4_msgs and Micro XRCE-DDS</description>

  <maintainer email="abelxmendoza@gmail.com">Abel</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
